Created template and needed files

--- a/images.html
+++ b/images.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>Search</title>
+        <title>Search Images</title>
     </head>
     <body>
         <header class="menu">
             <ul id="menu_lists">
                 <li><a href="advanced.html">Advanced</a></li>
-                <li><a href="images.html">Images</a></li>
-                <li><a class = "active" href="index.html">Home</a></li>                
+                <li><a class = "active" href="images.html">Images</a></li>
+                <li><a href="index.html">Home</a></li>                
             </ul>
         </header>
 
