Added more styling and working forms

--- a/advanced.html
+++ b/advanced.html
@@ -15,7 +15,7 @@
 
         <form class="google_form" action="https://google.com/search">
             <div class ="input_field">
-                <input type="text" name="q">
+                <input type="text" name="q" id="input_field_id">
             </div>
             <div class = "input_button">
                 <input type="submit" value="Google Search">
