--- a/images.html
+++ b/images.html
@@ -13,12 +13,12 @@
             </ul>
         </header>
 
-        <form class="google_form" action="https://google.com/search">
+        <form class="google_form" action="http://images.google.com/images">
             <div class ="input_field">
-                <input type="text" name="q">
+                <input type="text" name="q" id="input_field_id">
             </div>
             <div class = "input_button">
-                <input type="submit" value="Google Search">
+                <input type="submit" value="Google Image Search">
             </div>
         </form>
     </body>
