--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
             <div class = "input_button">
                 <input type="submit" value="Google Search">
+                <input value="I'm Feeling Lucky" aria-label="I'm Feeling Lucky" id="lucky" name="btnI" type="submit" data-ved="0ahUKEwiNm6S0jYLrAhXslnIEHYv2B30QnRsIDg">
             </div>
         </form>
     </body>
