Some estetical changes

--- a/advanced.html
+++ b/advanced.html
@@ -14,6 +14,7 @@
         </header>
 
         <form class="google_form_advanced" action="https://google.com/search">
+            <p><b>Find pages with ..</b></p>
             <div class ="input_field_advanced">
                 <label for="as_q">all these words:</label>
                 <input type="text" name="as_q" id="input_field_id_advanced">
