--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             </ul>
         </header>
 
+        <img id="google_logo" src="images/google_logo.png">
+
         <form class="google_form" action="https://google.com/search">
             <div class ="input_field">
                 <input type="text" name="q" id="input_field_id">
